tests/misc/tinc.nim
discard """
  file: "tinc.nim"
  line: 8
  errormsg: "type mismatch: got <int>"
"""
var x = 0

inc(x+1)




